# legsy

./: .env-example  .gitignore  README.md  dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 162f2013fb93_.py
infra/: docker-compose.yaml
legsy/: main.py  requirements.txt
legsy/api/: __init__.py  routers.py
legsy/api/routes/: __init__.py  good.py
legsy/core/: __init__.py  base.py  config.py  db.py  exceptions.py  session.py
legsy/models/: __init__.py  models.py
legsy/parser/: __init__.py  constants.py  parser.py
legsy/schemas/: WBJson.py  __init__.py  brand.py  color.py  good.py  goodcolor.py  goodsize.py  size.py
legsy/service_objects/: __init__.py  base.py  brand.py  color.py  good.py  size.py
tests/: conftest.py  test_main.py  test_parser.py  test_routes.py  test_service_objects.py  test_wbschema.py
tests/fixtures/: fixture_core.py  fixture_parser.py  fixture_routes.py  fixture_wbschema.py
