[tool.poetry]
name = "legsy"
version = "0.1.0"
description = ""
authors = ["vaniamaksimov <vaniamaksimov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.0"
docker = "^6.0.1"
pytest-asyncio = "^0.21.0"
flake8 = "^6.0.0"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore:DeprecationWarning",]
norecursedirs = [".venv", "alembic",]
python_files = ["test_*.py",]
python_functions = ["test_*",]
pythonpath = [".", "legsy",]
addopts = ["-vv", "-p", "no:cacheprovider", "--tb=line"]
asyncio_mode = "auto"
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = "True"